clusters/homelab/apps/live/pluto-for-channels/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pluto-for-channels
  namespace: live
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: traefik
  rules:
    - host: pluto.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pluto-for-channels
                port:
                  number: 8080
